# sourcehunter

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  deduplication.py  keyword_expansion.py  main.py  models.py  sourcing_analysis.py  sourcing_intent.py  storage.py
backend/app/routes/: auth.py  health.py  search_jobs.py
backend/app/scraping/: __init__.py  adapters.py  browser.py  models.py  worker.py
backend/tests/: conftest.py  test_auth.py  test_china_1688_adapter.py  test_deduplication.py  test_elimapi_1688_adapter.py  test_health.py  test_keyword_expansion.py  test_made_in_china_adapter.py  test_scraping.py  test_search_jobs.py  test_sourcing_analysis.py
docs/: DATA_MODEL.en.md  DATA_MODEL.zh.md  DEPLOYMENT_PREP.en.md  DEPLOYMENT_PREP.zh.md  DEPLOYMENT_RUNBOOK.en.md  DEPLOYMENT_RUNBOOK.zh.md  IMPLEMENTATION_ROADMAP.en.md  IMPLEMENTATION_ROADMAP.zh.md  MVP_SCOPE.en.md  MVP_SCOPE.zh.md  PRD.en.md  PRD.zh.md  TECHNICAL_SPEC.en.md  TECHNICAL_SPEC.zh.md  procurement-ranking-logic.md
docs/superpowers/plans/: 2026-05-25-sourcehunter-mvp-foundation.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  exportSuppliers.ts  rfq.ts  supplierFilters.ts  types.ts
frontend/tests/: basic.test.ts  exportSuppliers.test.ts  rfq.test.ts  supplierFilters.test.ts
scripts/: start-local.sh
